# langchain-csbot2

./: .env.example  Dockerfile  FRONTEND_COMPATIBILITY_FIX.md  PROJECT_STRUCTURE.md  RAG_CONSISTENCY_GUIDE.md  RAG_README.md  RAG_SYSTEM_GUIDE.md  README.md  README_AGENT_FIX.md  docker-compose.yml  init.sql  nginx.conf  pyproject.toml  requirements.txt  run_rag_system.sh  setup_rag_database.py  start_rag.sh  test_agent_fix.py  test_new_rag_system.py  test_rag_debug.py  test_rag_system.py  test_rag_upload.py  test_stats_compatibility.py  upload_existing_files.py
app/: config.py  main.py
backend/: .dockerignore  .env.example  .gitignore  AGENT_ERROR_FIX.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup_database.py  test_rag_system.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  chat.py  docs.py  rag.py
backend/app/persistence/: db.py  models.py  repositories.py
backend/app/services/: conversation.py  database_service.py  document_service.py  embedding_service.py  vectorstore_service.py
backend/app/services/ecommerce/: base.py  shopee.py  tokopedia.py  woocommerce.py
backend/app/services/langgraph/: agent_react.py  edges.py  graph.py  nodes.py  tools.py
backend/app/services/llm/: provider.py
backend/app/services/memory/: vector_memory.py
backend/app/services/notifications/: email_service.py
backend/app/services/rag/: ingest.py  retriever.py
backend/app/utils/: agent_utils.py  lang.py  sentiment.py
backend/uploads/: contact_info_translated.txt  faq_common.txt  faq_common_translated.txt  produk_larismart.csv
(+49 files in other folders)
