[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "httpx>=0.27.0",
    "langchain>=0.2.7,<0.3.0",
    "langchain-community>=0.2.7",
    "langchain-core>=0.2.43",
    "langchain-ollama>=0.1.3",
    "langchain-openai>=0.1.13",
    "langchain-postgres>=0.0.7",
    "langdetect>=1.0.9",
    "langgraph>=0.1.14,<0.2.0",
    "langsmith>=0.1.82",
    "ollama>=0.2.0",
    "openai>=1.30.0",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "pgvector>=0.2.5",
    "psycopg2>=2.9.10",
    "psycopg[binary]>=3.1.18",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "pytest>=8.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.29",
    "tenacity>=8.2.3",
    "typing-extensions>=4.9.0",
    "uvicorn[standard]>=0.27.0",
    "vadersentiment>=3.3.2",
]
